--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net462" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net462" />
+  <package id="Selenium.Firefox.WebDriver" version="0.16.1" targetFramework="net462" />
+  <package id="Selenium.WebDriver" version="3.4.0" targetFramework="net462" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="2.29.0" targetFramework="net462" />
 </packages>
